Fixed some configs

--- a/vmailsetup/postfix/sasl/smtpd.conf
+++ b/vmailsetup/postfix/sasl/smtpd.conf
@@ -1,9 +1,2 @@
 pwcheck_method: saslauthd 
-auxprop_plugin: sql
-sql_engine: mysql
-mech_list: plain login
-sql_hostnames: 127.0.0.1
-sql_user: <mysqluser>
-sql_passwd: <mysqlpass>
-sql_database: <mysqldb>
-sql_select: select password_enc from mail_users where username='%u@%r'
+mech_list: PLAIN LOGIN
